--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,5 @@
 <!-- <div style="position:absolute; bottom:0px;width:100%">
   <app-footer></app-footer>
 </div> -->
+<app-footer class="mt-auto"></app-footer>
 
