routing and navigation is implemented

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="text-center">
-    <h5 class="text-light">No of products selected: {{productCount}}</h5>
-    <span *ngFor="let title of  productsSentByChild" class="text-white">{{title }},</span>
+    <h5 class="text-dark">No of products selected: {{productCount}}</h5>
+    <span *ngFor="let title of  productsSentByChild" class="text-dark">{{title }},</span>
 </div>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-5 mb-5">
