--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,47 @@
-<h1 class="display-3 text-center text-info">Products Management system</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Pb</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link " routerLink="home" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contactus" routerLinkActive="active">Contactus</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
+        </li>
+        
+      </ul>
+    
+    </div>
+  </div>
+</nav>
+
+
+
+
+
 
 
 <!-- nest products component -->
 <div class="container">
-  <app-products></app-products>
+  <router-outlet></router-outlet>
 </div>
 
 <!-- nest footer component -->
 <!-- <div style="position:absolute; bottom:0px;width:100%">
   <app-footer></app-footer>
 </div> -->
-<app-footer class="mt-auto"></app-footer>
+<app-footer class="text-white w-100" style="position: fixed; bottom: -10px;"></app-footer>
 
