--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="bg-dark">
-    <h1 class="p-5 text-center text-white">Footer</h1>
+<div class="bg-white">
+    <h1 class="p-5 text-center text-dark">Footer</h1>
 </div>
