--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="products" routerLinkActive="active">Products</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="test" routerLinkActive="active">Test</a>
+        </li>
         
       </ul>
     
@@ -36,6 +39,7 @@
 
 <!-- nest products component -->
 <div class="container">
+   <!-- <app-products></app-products> -->
   <router-outlet></router-outlet>
 </div>
 
@@ -43,5 +47,5 @@
 <!-- <div style="position:absolute; bottom:0px;width:100%">
   <app-footer></app-footer>
 </div> -->
-<app-footer class="text-white w-100" style="position: fixed; bottom: -10px;"></app-footer>
+<app-footer class="mt-auto"></app-footer>
 
