--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="test" routerLinkActive="active">Test</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="users" routerLinkActive="active">Users</a>
+        </li>
         
       </ul>
     
