logout and protecting routes implemented

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>Homeeee!</p>
+<h1 class="text-white">{{n}}</h1>
+
+<h1 class="text-white">{{n | currency : "INR"}}</h1>
+
+<h1 class="text-white">{{today}}}</h1>
+
