--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,13 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="register" routerLinkActive="active">Register</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!dsObj.userLoginStatus()">
           <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="dsObj.userLoginStatus()" >
+          <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="dsObj.logout()">Logout</a>
+        </li>
+        <li class="nav-item" >
           <a class="nav-link" routerLink="contactus" routerLinkActive="active">Contactus</a>
         </li>
         <li class="nav-item">
