shared modules and pagination

--- a/src/app/admin/viewproducts/viewproducts.component.html
+++ b/src/app/admin/viewproducts/viewproducts.component.html
@@ -1,3 +1,5 @@
+
+<input type="text" name="productTitle" placeholder="Search by brand" class="form-control m-5" [(ngModel)]="searchTerm">
 <div class="table-content">
     <form #ref="ngForm" (ngSubmit)="saveMobile(ref.value)">
         <table class="table text-center text-white">
@@ -7,7 +9,7 @@
                 <th>Image</th>
             </thead>
             <tbody>
-                <tr *ngFor="let mobile of mobiles;let ind=index">
+                <tr *ngFor="let mobile of mobiles | search :searchTerm  | paginate: { itemsPerPage: 2, currentPage: p };let ind=index">
 
                     <!-- product title -->
                     <td class="title">
@@ -53,4 +55,9 @@
             </tbody>
         </table>
     </form>
+</div>
+
+
+<div class="text-center text-white">
+    <pagination-controls (pageChange)="p=$event"></pagination-controls>
 </div>
